deploy/manifests/istio/istio-egress/whitelist/external-service/base/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry
spec:
  hosts:
    - EXTERNAL_HOST
  ports:
    - name: http-port
      number: 80
      protocol: HTTP
  resolution: DNS
