deploy/manifests/istio/istio-egress/whitelist/external-service/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - EXTERNAL_HOST
  gateways:
    - EGRESS_GATEWAY
    - mesh
  exportTo:
    - "*"
  http:
    - name: inbound
      match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: EGRESS_GATEWAY
            port:
              number: 80
    - name: outbound
      match:
        - gateways:
            - EGRESS_GATEWAY
          port: 80
      route:
        - destination:
            host: EXTERNAL_HOST
            port:
              number: 80
